[package]
name = "seeking-trouble"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13"
regex = "1"
thiserror = "1"
tree-sitter = "0.20"
tree-sitter-c = "0.20.1"

[dev-dependencies]
indoc = "1"
tempdir = "0.3.7"
anyhow = "1"
